<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLikeProgramming" />

    <TextView
        android:id="@+id/textViewLikeProgramming"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_like_programming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDob" />

    <EditText
        android:id="@+id/inputPersonName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/placeholder_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPersonLastname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/placeholder_lastname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPersonName" />

    <TextView
        android:id="@+id/textViewOrientation"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_orientation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPersonLastname" />

    <TextView
        android:id="@+id/textViewDob"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_dob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrientation" />

    <Spinner
        android:id="@+id/spinnerOrientation"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:minHeight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewOrientation"
        app:layout_constraintTop_toBottomOf="@+id/inputPersonLastname" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLikeProgramming"
        app:layout_constraintTop_toBottomOf="@+id/buttonDate">

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkLikeOption"
            android:text="@string/option_yes_like_programming" />

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkLikeOption"
            android:text="@string/option_no_like_programming" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxJava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/label_language_java"
        app:layout_constraintStart_toEndOf="@+id/textViewLanguage"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBoxPython"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:text="@string/label_language_python"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxJava"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBoxJS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_language_js"
        app:layout_constraintStart_toStartOf="@+id/checkBoxJava"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxJava" />

    <CheckBox
        android:id="@+id/checkBoxGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_language_go"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPython"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPython" />

    <CheckBox
        android:id="@+id/checkBoxCpp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_language_C_Cpp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxJS"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxJS" />

    <CheckBox
        android:id="@+id/checkBoxCSharp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_language_c_sharp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxGo"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGo" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/buttonBGColor"
        android:onClick="sendInformation"
        android:text="@string/label_button_send"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonClean"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonClean"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/buttonBGColor"
        android:onClick="resetInputs"
        android:text="@string/label_button_clean"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSend" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/dobButtonBGColor"
        android:onClick="openDatePickerDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinnerOrientation"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOrientation" />


</androidx.constraintlayout.widget.ConstraintLayout>